# stats

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  components.json  eslint.config.mjs  mobrowser.conf.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  check.yml  release.yml  static-analysis.yml  test.yml  unit-tests.yml
assets/: app.icns  entitlements.plist
src/main/: application-menu.ts  application-window.ts  application.ts  branding.ts  index.ts  poll-loop.ts  sentry.ts  tray-controller.ts
src/main/metrics/: metric-types.ts  metrics-sampler.ts  metrics-service.ts
src/main/processes/: process-action-service.ts  process-collector-client.ts  process-cpu-usage.ts  process-explorer-config.ts  process-explorer-service.ts  process-identity.ts  process-snapshot-mapper.ts  process-snapshot-service.ts  snapshot-refresh-loop.ts
src/native/: main.cc  temperature_probe.cc  temperature_probe.h
src/native/metrics/: memory_probe.cc  memory_probe.h  network_probe.cc  network_probe.h  temperature_probe.cc  temperature_probe.h
src/native/processes/: app_metadata.h  app_metadata.mm  libproc_process_enumerator.cc  libproc_process_enumerator.h  native_availability.cc  native_availability.h  native_process_collector.cc  native_process_collector.h  native_process_types.h  process_arguments_reader.cc  process_arguments_reader.h  process_collector.cc  process_collector.h  process_collector_service.cc  process_collector_service.h  process_metrics_reader.cc  process_metrics_reader.h  responsiveness.cc  responsiveness.h  workspace_app_enricher.h  workspace_app_enricher.mm
src/native/proto/: memory.proto  network.proto  process_collector.proto  temperature.proto
src/native/temperature/: temperature_probe.cc  temperature_probe.h
src/renderer/: App.tsx  index.css  index.html  main.tsx  sentry.ts
src/renderer/components/: metric-card.tsx  metric-row.tsx  metrics-overview.tsx  theme-provider.tsx
src/renderer/components/metrics/: area-layer.tsx  cpu-graph.tsx  cpu-row.tsx  disk-row.tsx  memory-graph.tsx  memory-row.tsx  metric-row-header.tsx  metric-row.tsx  metrics-overview.tsx  network-graph.tsx  network-row.tsx  segmented-meter.tsx
src/renderer/components/processes/: command-line-block.tsx  disclosure.tsx  member-row.tsx  process-actions.tsx  process-detail-fields.tsx  process-detail-graph.tsx  process-detail.tsx  process-explorer-view.tsx  process-icon.tsx  process-list.tsx  process-row.tsx  process-search-field.tsx  process-sort-control.tsx  process-view-switch.tsx  process-view.ts  scroll-fade.tsx  use-members-overlay.ts  use-order-pin.ts  use-process-actions.ts  use-process-histories.ts
src/renderer/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  progress-bar.tsx  segmented-control.tsx
src/renderer/domain/: area-path.ts  cpu-history.ts  graph-scale.ts  metric-view.ts  process-detail.ts  process-list.ts  sample-history.ts
src/renderer/gateway/: app-gateway.ts  metrics-gateway.ts  process-explorer-gateway.ts  process-gateway.ts  snapshot-delta.ts
src/renderer/lib/: format.ts  tools.ts
src/renderer/processes/: process-explorer-view.tsx  process-list.tsx  process-row.tsx  process-search-field.tsx  process-sort-control.tsx  process-view-switch.tsx  process-view.ts
src/renderer/proto/: app.proto  greet.proto  metrics.proto  process_explorer.proto
tests/helpers/: process-fixtures.ts
tests/unit/: area-path.test.ts  cpu-history.test.ts  format.test.ts  metric-view.test.ts  metrics-sampler.test.ts  metrics-service.test.ts  process-action-service.test.ts  process-detail.test.ts  process-explorer-gateway.test.ts  process-list.test.ts  process-snapshot-service.test.ts  sample-history.test.ts  snapshot-delta.test.ts  tray-controller.test.ts
